--- a/application/src/app/css/style.scss
+++ b/application/src/app/css/style.scss
@@ -40,9 +40,13 @@ h1, h2, h3, h4, h5, p, ul, li {
   text-align: center;
 }
 
-.hr-medium{
+.hr-medium {
   width: 20%;
 }
+.hr-large{
+  width: 80%;
+}
+
 :focus {
   outline: none !important;
 }
